TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Fix dependonservice LanManWorkStation (old win)
 * Fix RtlStringFromGUID problem on NT4

2012-07-26 MickeM
 * Fixed some memoryelaks in LUAModule
 * Extracted the test functions into a library
 * Added lib folder as search path for lua scripts
 * Tweaks and improvments all around
 * Improved the build scripts a lot making files work on linux (still need to manually build the targets though)

2012-07-23 MickeM
 * Added support for LUAScripts to linux enviornments (still a few warnings to sort out)
 * Improved lua unit test scripts
 * Added support for using member functions as handlers in Lua scripts

2012-07-17 MickeM
 * Performance enhancements to build time

2012-07-11 MickeM
 * LUAScript: Improved lua scripting module a lot
 * LUAScript: Added protocol buffer support to lua scripts
 * tests: Rewrote (halfway there) test_nrpe python script as a lua script.
 * CheckEventLog: Fixed command name when submitting real-time "no action checks"

2012-06-18 MickeM
 * Fixed issue with parsing in test mode
 * Fixed Graphite client using wrong time for datestamp
 * Added so debug NSCA logs host name

2012-06-16 MickeM
 * Initial (rather crude) NRDP support.

2012-06-16 MickeM
 * Merged in master branch
 * Fixed almost all -Wall warnings (the rest are probably not getting fixed in the near future due to their nature)
 
2012-06-12 MickeM
 * Improved error handling in performance counters #436
 * Improved parsing of "legacy command lines"

2012-06-12 MickeM
 * Added log level = off to disable logging.
 * Added option in NSCAClient to hostname (auto-lc) to use lower case version of hostname. #533
 * Reworked how commands are read.
   If a command is defined without a section (default) no section will be added and instead a comment will be addded on how to add the section.
   This should (I hope) resolve the "missing command" for good.
 * Improved error messages for missing commands