@@ -104,7 +104,7 @@ function TestNRPE:simple_handler(command, args)
 end
 
 function TestNRPE:handler(req)
-	msg = self:get_response(args[0])
+	local msg = self:get_response(args[0])
 	msg.got_response = true
 	self:set_response(msg)
 	rmsg = self:get_request(args[0])
@@ -131,7 +131,7 @@ function TestNRPE:submit_payload(tag, ssl, length, source, status, message, perf
 		enc:set_value(tostring(length))
 		enc = host:add_metadata()
 		enc:set_key("timeout")
-		enc:set_value('5')
+		enc:set_value('10')
 	end
 
 	uid = string.random(12)
@@ -146,7 +146,6 @@ function TestNRPE:submit_payload(tag, ssl, length, source, status, message, perf
 	serialized = msg:serialized()
 	result_code, response = core:query('nrpe_forward', serialized)
 	response_message = protobuf.Plugin.QueryResponseMessage.parsefromstring(response)
-	--print(response_message:get_payload(1):get_message())
 
 
 	found = False
@@ -164,7 +163,7 @@ function TestNRPE:submit_payload(tag, ssl, length, source, status, message, perf
 			found = True
 			break
 		else
-			log(string.format('Waiting for %s (%s/%s)', uid,tag,target))
+			core:log(string.format('Waiting for %s (%s/%s)', uid,tag,target))
 			--sleep(500)
 		end
 	end
@@ -216,6 +215,68 @@ function TestNRPE:do_one_test(ssl, length)
 	return result
 end
 
+function TestNRPE:test_timeout(ssl, server_timeout, client_timeout, length)
+
+	local conf = Settings()
+	local core = Core()
+	conf:set_bool('/settings/NRPE/test_nrpe_server', 'use ssl', ssl)
+	conf:set_int('/settings/NRPE/test_nrpe_server', 'timeout', server_timeout)
+	conf:set_bool('/settings/NRPE/test_nrpe_server', 'allow arguments', true)
+	conf:set_int('/settings/NRPE/test_nrpe_server', 'payload length', length)
+	core:reload('test_nrpe_server')
+
+	conf:set_string('/settings/NRPE/test_nrpe_client/targets/default', 'address', 'nrpe://127.0.0.1:15666')
+	conf:set_bool('/settings/NRPE/test_nrpe_client/targets/default', 'use ssl', ssl)
+	conf:set_int('/settings/NRPE/test_nrpe_client/targets/default', 'timeout', client_timeout)
+	conf:set_int('/settings/NRPE/test_nrpe_client/targets/default', 'payload length', length)
+
+	core:reload('test_nrpe_client')
+
+	local result = test.TestResult:new{message="Testing timeouts ssl: "..tostring(ssl)..", server: "..tostring(server_timeout)..", client: "..tostring(client_timeout)}
+	
+	
+
+	local msg = protobuf.Plugin.QueryRequestMessage.new()
+	hdr = msg:get_header()
+	hdr:set_version(1)
+	hdr:set_recipient_id('test')
+	host = hdr:add_hosts()
+	host:set_address("127.0.0.1:15666")
+	host:set_id('test')
+
+	uid = string.random(12)
+	payload = msg:add_payload()
+	payload:set_command('check_py_nrpe_test_s')
+	payload:set_arguments(1, uid)
+	rmsg = self:get_request(uid)
+	rmsg.status = 'ok'
+	rmsg.message = 'Hello: Timeout'
+	rmsg.perfdata = ''
+	self:set_request(rmsg)
+	serialized = msg:serialized()
+	result_code, response = core:query('nrpe_forward', serialized)
+	response_message = protobuf.Plugin.QueryResponseMessage.parsefromstring(response)
+
+
+	found = False
+	for i = 0,10 do
+		if (self:has_response(uid)) then
+			rmsg = self:get_response(uid)
+			result:add_message(false, string.format('Testing to recieve message using'))
+			self:del_response(uid)
+			found = true
+			break
+		else
+			core:log(string.format('Timeout waiting for %s', uid))
+			--sleep(500)
+		end
+	end
+	if (found) then
+		result:add_message(false, string.format('Making sure timeout message was never delivered'))
+	end
+	
+	return result
+end
 
 function TestNRPE:run()
 	local result = test.TestResult:new{message="NRPE Test Suite"}
@@ -224,6 +285,11 @@ function TestNRPE:run()
 	result:add(self:do_one_test(true, 4096))
 	result:add(self:do_one_test(true, 65536))
 	result:add(self:do_one_test(true, 1048576))
+
+	result:add(self:test_timeout(false, 30, 1, 10485760))
+	result:add(self:test_timeout(false, 1, 30, 10485760))
+	result:add(self:test_timeout(true, 30, 1, 10485760))
+	result:add(self:test_timeout(true, 1, 30, 10485760))
 	return result
 end
 
